# vbf-shared-models

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.bak  setup.py  sourcing_script.py
src/vbfsharedmodels/: ComputeJobContext.py  ComputeJobResult.py  JobState.py  JobStateNames.py  StrategicDividendData.py  Strategy.py  __init__.py
src/vbfsharedmodels/models/: ComputeJobBaseV2.py  ComputeJobContext.py  ComputeJobResultSymbol.py  ComputeJobResultV2.py  ComputeJobV2.py  ComputeJobV2Request.py  JobState.py  JobStateCountdown.py  JobStateNames.py
vbfsharedmodels/: ComputeJobResult.py  FilterCriteria.py  StrategicBasicData.py  StrategicData.py
