[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbfsharedmodels"
version = "0.1.0"
authors = [
  { name="Jan-Michael Laser", email="jmlaser@web.de" },
]
description = "Shared models for consistent usage over various microservices."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/laserjm/vbf-shared-models"
"Bug Tracker" = "https://github.com/laserjm/vbf-shared-models/issues"